--- a/package.json
+++ b/package.json
@@ -1,23 +1,13 @@
+
 {
-  "name": "monovratha-accepted-site",
+  "name": "manovratha-sanctuary",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "description": "A holistic global sanctuary for mental health professionals and institutions.",
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "1.3.0",
-    "lucide-react": "0.460.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "lucide-react": "^0.460.0",
+    "@google/genai": "^1.3.0"
   }
 }
