--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "lucide-react": "^0.460.0",
-    "@google/genai": "^1.3.0"
-  },
-  "devDependencies": {
+    "@google/genai": "^1.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
