feat: Update dev dependencies and fix ref types
Adds `@types/node` to dev dependencies and explicitly types `useRef` hooks in `BreathingApp.tsx` to be nullable or mutable for improved type safety. Updates `tsconfig.json` to exclude `node_modules` and Vite config files from compilation.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", "vite.config.ts", "vite.config.js"]
 }
