--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google/genai": "^1.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
